Animation edits for better spacing between pucks. Header animation initial setup. Clock containers background color changed. Fixing landscape mode puck x-axis travel, switched px over to rem

--- a/assets/animation.css
+++ b/assets/animation.css
@@ -46,64 +46,64 @@
 .hockeyPuck:nth-child(1) {
     top: calc(50% - 40px);
     left: calc(0% - 85px);
-    animation-delay: 1055ms;
+    animation-delay: 1100ms;
 }
 .hockeyPuck:nth-child(1)::before, .hockeyPuck:nth-child(1)::after {
-    animation-delay: 1055ms;
+    animation-delay: 1100ms;
 }
 
 .hockeyPuck:nth-child(2) {
     top: calc(50% - 85px);
-    left: calc(0% - 220px);
-    animation-delay: 2500ms;
+    left: calc(0% - 120px);
+    animation-delay: 5500ms;
 }
 .hockeyPuck:nth-child(2)::before, .hockeyPuck:nth-child(2)::after {
-    animation-delay: 2500ms;
+    animation-delay: 5500ms;
 }
 
 .hockeyPuck:nth-child(3) {
     top: calc(50% - 75px);
     left: calc(0% - 245px);
-    animation-delay: 3000ms;
+    animation-delay: 8000ms;
 }
 .hockeyPuck:nth-child(3)::before, .hockeyPuck:nth-child(3)::after {
-    animation-delay: 3000ms;
+    animation-delay: 8000ms;
 }
 
 .hockeyPuck:nth-child(4) {
-    top: calc(50% - 20px);
+    top: calc(50% - 190px);
     left: calc(0% - 95px);
-    animation-delay: 6500ms;
+    animation-delay: 12500ms;
 }
 .hockeyPuck:nth-child(4)::before, .hockeyPuck:nth-child(4)::after {
-    animation-delay: 6500ms;
+    animation-delay: 12500ms;
 }
 
 .hockeyPuck:nth-child(5) {
     top: calc(50% - 130px);
     left: calc(0% - 145px);
-    animation-delay: 9050ms;
+    animation-delay: 16050ms;
 }
 .hockeyPuck:nth-child(5)::before, .hockeyPuck:nth-child(5)::after {
-    animation-delay: 9050ms;
+    animation-delay: 16050ms;
 }
 
 .hockeyPuck:nth-child(6) {
-    top: calc(50% - 80px);
-    left: calc(0% - 525px);
-    animation-delay: 11000ms;
+    top: calc(50% - 280px);
+    left: calc(0% - 35px);
+    animation-delay: 19000ms;
 }
 .hockeyPuck:nth-child(6)::before, .hockeyPuck:nth-child(5)::after {
-    animation-delay: 11000ms;
+    animation-delay: 19000ms;
 }
 
 .hockeyPuck:nth-child(7) {
-    top: calc(50% - 45px);
+    top: calc(50% - 105px);
     left: calc(0% - 80px);
-    animation-delay: 15000ms;
+    animation-delay: 25000ms;
 }
 .hockeyPuck:nth-child(7)::before, .hockeyPuck:nth-child(5)::after {
-    animation-delay: 15000ms;
+    animation-delay: 25000ms;
 }
 
 
@@ -145,7 +145,7 @@
             transform: translateX(0);
        }
         100% {
-            transform: translateX(1200px);
+            transform: translateX(85rem);
        }
     }
   }
@@ -155,16 +155,12 @@
         float: left;
     }
 
-    /* .hockeyPuck {
-        left: 30%;
-    } */
-
     @keyframes hockeyPuck {
         0% {
             transform: translateX(0);
        }
         100% {
-            transform: translateX(91rem);
+            transform: translateX(92rem);
        }
     }
 }
