--- a/assets/index.css
+++ b/assets/index.css
@@ -2,17 +2,18 @@
 Avalanche blue #2596be;
 */
 
+
+@font-face {
+    font-family: "DSEG7-Classic-Bold";
+    src: url(fonts/DSEG7Classic-Bold.woff);
+}
+
 html, body {
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
     overflow: hidden;
-}
-
-@font-face {
-    font-family: "DSEG7-Classic-Bold";
-    src: url(fonts/DSEG7Classic-Bold.woff);
 }
 
 h1 {
@@ -22,14 +23,30 @@ h1 {
     font-family: 'Bungee', 'Oxanium', 'Helvetica', sans-serif;
     font-size: 64px;
     font-display: swap;
-    opacity: 80%;
     text-align: center;
+    text-decoration: none;
     letter-spacing: 0.3rem;
-    color: #5d1d31;
-    border: none;
+    white-space: nowrap;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
+    color: #5d1d31;
+    opacity: 88%;
+    border: none;
+    z-index: 30;
+    background: linear-gradient(to right,#ff8b8b 0, #5d1d31 1.33%, #5d1d31);
+    background-position: 0;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-size-adjust: none;
+    animation: shine 12s infinite linear;
+    animation-fill-mode: forwards;
 }
+    @keyframes shine {
+        0% { background-position: 0; }
+        50% { background-position: 71rem; }
+        100% { background-position: 76.25rem }
+    }
 
 .wrapper {
     display: -webkit-box;
@@ -79,9 +96,9 @@ h1 {
     text-align: center;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    background-image: repeating-linear-gradient(rgba(110, 170, 250, 0.2), rgba(110, 170, 250, 0.6));
+    background-image: linear-gradient(rgba(110, 170, 250, 0.2), rgb(255, 255, 255));
     color: #5d1d31;
-    border: 1px solid rgba(110, 170, 250, 0.3); 
+    border: 0.5px solid rgba(110, 170, 250, 0.3); 
     border-bottom: 1px solid rgba(110, 170, 250, 0.3);
     box-shadow: 0 0 1px #143b91;
     border-radius: 5px 35px;
@@ -121,7 +138,7 @@ h1 {
     background-repeat: no-repeat;
     background-position: center;
     margin: 0 auto;
-    opacity: 40%;
+    opacity: 30%;
     z-index: -20;
 }
 
@@ -143,7 +160,7 @@ h1 {
     margin-right: 12rem;
     margin-bottom: 3rem;
     filter: drop-shadow(0 0 4px rgba(88, 88, 88, 0.8));
-    transform: scale(1.3);
+    transform: scale(1.4);
     z-index: 12;
 }
 
@@ -180,6 +197,11 @@ h1 {
         margin-top: 5rem;
         margin-right: 2.5rem;
     }
+    @keyframes shine {
+        0% { background-position: 0; }
+        50% { background-position: 35rem; }
+        100% { background-position: 38.25rem }
+    }  
 }
 
 @media screen and (max-width: 768px) and (orientation: landscape) {
@@ -213,7 +235,7 @@ h1 {
 }
 
 
-@media screen and (max-device-width: 768px) and (orientation: landscape) {
+@media screen and (max-width: 768px) and (orientation: landscape) {
     h1 {
         margin: 2rem;
         font-size: 28px;
